--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.30"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
