--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.2",
+    "@types/oracledb": "^6.10.0",
     "carousel": "^0.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "mysql2": "^3.14.1",
-    "next": "15.3.2",
+    "next": "^15.5.6",
+    "oracledb": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
